<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/location_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/img18" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:text="Tbilis, Georgia"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/now_block"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/location_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="79dp"
            android:contentDescription="@string/weather"
            android:src="@drawable/img1" />

        <TextView
            android:id="@+id/todayBig"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/_27_c"
            android:textColor="#fff"
            android:textSize="60sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/now_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/party_cloud"
        android:textColor="#fff"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/now_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weather_today"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@id/now_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/weather_today"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weather_today_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/weather_today"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    >
    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/five_days"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@id/weather_today_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Next 5 Days"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/five_days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#fff"
                android:layout_margin="10dp"
                android:text="@string/date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#fff"
                android:layout_margin="10dp"
                android:text="@string/day"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#fff"
                android:layout_margin="10dp"
                android:text="@string/night"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/border"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/five_day_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            >

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>